tests/snapshots/parser_snapshots__compound__case_multiple_patterns.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"case $x in a|b|c) echo match;; esac\")"
---
Case {
    word: Word {
        parts: [
            Parameter(
                "x",
            ),
        ],
    },
    arms: [
        CaseArm {
            patterns: [
                Word {
                    parts: [
                        Literal(
                            "a",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Literal(
                            "b",
                        ),
                    ],
                },
                Word {
                    parts: [
                        Literal(
                            "c",
                        ),
                    ],
                },
            ],
            body: Some(
                Simple(
                    SimpleCommand {
                        assignments: [],
                        words: [
                            Word {
                                parts: [
                                    Literal(
                                        "echo",
                                    ),
                                ],
                            },
                            Word {
                                parts: [
                                    Literal(
                                        "match",
                                    ),
                                ],
                            },
                        ],
                        redirections: [],
                    },
                ),
            ),
            terminator: Break,
        },
    ],
}
