tests/snapshots/parser_snapshots__compound__function_definition.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"greet() { echo hello; }\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "greet",
                    ),
                ],
            },
        ],
        redirections: [],
    },
)
