tests/snapshots/parser_snapshots__compound__function_no_parens.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"function greet { echo hello; }\")"
---
FunctionDef {
    name: "greet",
    body: BraceGroup(
        Simple(
            SimpleCommand {
                assignments: [],
                words: [
                    Word {
                        parts: [
                            Literal(
                                "echo",
                            ),
                        ],
                    },
                    Word {
                        parts: [
                            Literal(
                                "hello",
                            ),
                        ],
                    },
                ],
                redirections: [],
            },
        ),
    ),
}
